# django-rest-framework.org-tutorial-quickstart

./: README.md  manage.py  pyproject.toml
quickstart/: asgi.py  settings.py  urls.py  wsgi.py
quickstart/serializers/: __init__.py  group_serializer.py  user_serializer.py
quickstart/views/: __init__.py  group_view_set.py  user_view_set.py
tutorial/: settings.py  urls.py
